T Compiler/tests/phase3tests/error/bogusNew.t
int main()
{
  Object x;

  x = new Obj();
}
